
  * Add python:Depends to control file. Closes: #525086
  * websetup: Display stderr in browser if ikiwiki setup fails.
  * blogspam: Load RPC::XML library in checkconfig, so that an
    error can be printed at that point if it's not available,
    allowing the admin to see it during wiki setup.
    Closes: #520015
  * websetup: If setup fails, restore old setup file.

 -- Joey Hess <joeyh@debian.org>  Tue, 21 Apr 2009 21:41:38 -0400

ikiwiki (3.10) unstable; urgency=low

  * darcs: Finally added support for this VCS, thanks to many
    contributors:
    - Thomas Schwinge wrote the original file, implementing only rcs_commit.
    - Benjamin A'Lee contributed an alternative implementation.
    - Tuomo Valkonen contributed rcs_getctime and stub rcs_recentchanges.
    - Simon Michael contributed multiple changes.
    - Petr Ročkai fixed rcs_recentchanges.
    - Sven M. Hallberg merged the above and added missing features.
  * Add missing newline to Confirm Password prompt.
  * Add missing permalink support to archivepage and titlepage templates.
  * debian/control: Wrap fields.
  * inline: Add author info to archive display.
  * Add a microblog template that is useful for inlining microblogging posts.

 -- Joey Hess <joeyh@debian.org>  Sat, 18 Apr 2009 19:40:25 -0400

ikiwiki (3.09) unstable; urgency=low

  * inline: Add title_natural sort order, using Sort::Naturally
    (chrysn)
  * inline: Fix urls to feed when feedfile is used on an index page.
  * git, mercurial: Fix --getctime to return file creation time,
    not last commit time.
  * Updated French translation (Jean-Luc Coulon). Closes: #521072
  * css: Add clear: both to inlinefooter.
  * comments: Fix too loose test for comments pages that matched
    normal pages with "comment_" in their name. Closes: #521322
  * comments: Fix anchor ids to be legal xhtml. Closes: #521339
  * Fix documentation of anonok_pagespec. Closes: #521793
  * Add missing suggests on libtext-textile-perl. Closes: #522039